--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -36,7 +36,7 @@
         margin: 2.8rem 0 5rem;
 
         button {
-          width: 17.125rem;
+          width: 17.5rem;
 
           &:last-child {
             background: var(--white-color);
@@ -80,33 +80,214 @@
       }
     }
 
-    .grid_section {
+    .cards_section {
+      width: 100%;
 
-      .grid {
-        display: grid;
+      .cards {
         width: 100%;
-        grid-template-columns: 1fr 1fr;
-        //grid-template-rows: repeat(3, 31.25rem) 39.625rem 39.625rem;
-        gap: 2.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 2.5rem;
+        margin: 5rem 0;
 
         .card {
-          background: #FBBC0F;
+          width: 100%;
           height: 31.25rem;
-          grid-column: 1 / 3;
-          //width: 70rem;
-          //height: 100%;
+          background: var(--card-backgound);
+          display: flex;
+          column-gap: 4rem;
+          padding-left: 2.5rem;
+          justify-content: space-between;
+          align-items: center;
+          border-radius: 1.25rem;
+          overflow: hidden;
+
+          .description {
+            display: flex;
+            flex-direction: column;
+            max-width: 27rem;
+            width: 100%;
+
+            span {
+              text-align: left;
+            }
+
+            span:last-child {
+              max-width: 25rem;
+            }
+          }
+
+          img {
+            height: 100%;
+            width: auto;
+          }
+
+          .centered {
+            width: 29rem;
+            margin-right: 1rem;
+          }
         }
 
-        .left_card {
-          background: #FBBC0F;
-          height: 31.25rem;
-          grid-column: 1 / 2;
+        .left {
+          flex-direction: row-reverse;
+          padding: 0 2.5rem 0 0;
         }
 
-        .right_card {
-          background: #FBBC0F;
-          height: 31.25rem;
-          grid-column: 2 / 3;
+        .small_card {
+          display: flex;
+          flex-direction: column;
+          background: var(--card-backgound);
+          border-radius: 1.25rem;
+          padding: 3.12rem 2.5rem 0;
+          max-height: 40rem;
+
+          span {
+            text-align: left;
+            margin: 0;
+          }
+
+          span:last-of-type {
+            max-width: 25.7rem;
+            margin: 1.25rem 0 3rem;
+          }
+
+          img {
+            height: 100%;
+            width: auto;
+          }
+        }
+
+        .two_cards {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          grid-template-rows: 40rem;
+          max-width: 100%;
+          width: 100%;
+          column-gap: 2.5rem;
+        }
+      }
+
+      .buttons {
+        display: flex;
+        column-gap: 1.25rem;
+
+        button {
+          width: 17.5rem;
+
+          &:last-child {
+            background: var(--white-color);
+          }
+        }
+      }
+    }
+
+    .carousel_section {
+      width: 100%;
+      position: relative;
+
+      span {
+        max-width: 44rem;
+      }
+    }
+
+    .connect_train_section {
+      .cards {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        gap: 2.5rem;
+        margin: 5rem 0;
+
+        .card {
+          background: var(--card-backgound);
+          padding: 2.5rem;
+          display: flex;
+          flex-direction: row-reverse;
+          column-gap: 7.5rem;
+          align-items: center;
+
+          img {
+            width: 12.5rem;
+            height: 12.5rem;
+          }
+
+          .description {
+            display: flex;
+            flex-direction: column;
+
+            span {
+              text-align: left;
+              min-width: 27.4375rem;
+              width: 100%;
+            }
+          }
+        }
+
+        .two_cards {
+          height: 28.6875rem;
+          display: flex;
+          gap: 2.5rem;
+          width: 100%;
+
+          .card {
+            flex-direction: column;
+            align-items: start;
+
+            img {
+              width: 7rem;
+              height: 7rem;
+            }
+          }
+        }
+      }
+    }
+
+    .faq_section {
+      h2 {
+        margin-bottom: 5rem;
+      }
+    }
+
+    .form_section {
+      display: flex;
+      column-gap: 10.88rem;
+      width: 100%;
+      margin: 7.5rem;
+
+      .description {
+        display: flex;
+        flex-direction: column;
+        row-gap: 1.88rem;
+        width: 100%;
+        max-width: 29rem;
+        text-align: left;
+      }
+
+      .form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        row-gap: 1.25rem;
+
+        input {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          padding: 1.5rem 1.875rem 1.375rem 1.875rem;
+          border-radius: 0.9375rem;
+          border: 1px solid #000;
+          background: #FFF;
+          color: var(--black-color);
+          font-size: 1rem;
+          font-weight: 400;
+          outline: none;
+        }
+
+        button {
+          width: 100%;
+          margin-top: .63rem;
         }
       }
     }
