--- a/client/app/ui/header/header.module.scss
+++ b/client/app/ui/header/header.module.scss
@@ -1,3 +1,5 @@
+@import "../../breakpoints";
+
 .header {
   position: relative;
   width: 100%;
@@ -8,6 +10,11 @@
   background: var(--white-color);
   padding: 0 4.5rem;
 
+  @include for-tablet-down() {
+    height: 5rem;
+    padding: 1.67rem;
+  }
+
   .navbar {
     position: absolute;
     inset: 0;
@@ -17,6 +24,10 @@
     justify-content: space-between;
     align-items: center;
     letter-spacing: -0.02625rem;
+
+    @include for-tablet-down() {
+      display: none;
+    }
   }
 
   .logo {
@@ -24,24 +35,29 @@
     align-items: center;
     column-gap: 0.85rem;
 
+    @include for-tablet-down() {
+      column-gap: 0.56rem;
+    }
+
     .icon {
-      width: 3.08488rem;
-      height: 2.5rem;
+      width: 2.0rem;
+      height: 1.66rem;
     }
 
     .name {
-      width: 4.86525rem;
-      height: 1.66669rem;
+      width: 3.2rem;
+      height: 1.1rem;
     }
   }
 
-  .button {
-    width: 9.375rem;
-    padding: 0.625rem 1.25rem;
-    border-radius: 1.25rem;
-    background: var(--white-color);
-    font-size: 0.875rem;
-    font-weight: 400;
-    letter-spacing: -0.02625rem;
+  .burger {
+    display: none;
+    width: 3rem;
+    height: 0.8rem;
+    cursor: pointer;
+
+    @include for-tablet-down {
+      display: block;
+    }
   }
 }
