--- a/client/app/ui/footer/footer.module.scss
+++ b/client/app/ui/footer/footer.module.scss
@@ -1,3 +1,5 @@
+@import "../../breakpoints";
+
 .footer {
   position: relative;
   width: 100%;
@@ -6,6 +8,12 @@
   align-items: center;
   background: var(--card-backgound);
   padding: 5rem 9.38rem;
+
+  @include for-tablet-down() {
+    flex-direction: column;
+    padding: 5.17rem 0;
+    row-gap: 3.33rem;
+  }
 
   .navbar {
     position: absolute;
@@ -18,18 +26,37 @@
     row-gap: 1.88rem;
     letter-spacing: -0.02625rem;
 
+    @include for-tablet-down() {
+      position: relative;
+      max-width: 100%;
+      width: 100%;
+      row-gap: 3.33rem;
+    }
+
     div {
       max-width: 27.5rem;
       column-gap: 1.2rem;
       display: flex;
       align-items: center;
       justify-content: center;
+
+      @include for-tablet-down() {
+        flex-direction: column;
+        max-width: 100%;
+        width: 100%;
+        row-gap: 2rem;
+      }
     }
 
     .contacts {
       display: flex;
       row-gap: 1.88rem;
       align-items: center;
+
+      @include for-tablet-down() {
+        flex-direction: column;
+        row-gap: 1.5rem;
+      }
     }
   }
 
@@ -53,5 +80,9 @@
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
+
+    @include for-tablet-down() {
+      row-gap: 1.33rem;
+    }
   }
 }
