--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -17,12 +17,16 @@
 html {
   width: 100vw;
   height: 100vh;
-  font-size: 1.111vw;
+  font-size: calc(16vw / (1440 / 100));
   overflow-x: hidden;
   scroll-behavior: smooth;
 
+  @include for-desktop-down() {
+    font-size: calc(16vw / (780 / 100));
+  }
+
   @include for-tablet-down() {
-    font-size: 3.333vw;
+    font-size: calc(16vw / (480 / 100));
   }
 }
 
@@ -40,7 +44,6 @@ img {
   font-style: italic;
   background-repeat: no-repeat;
   background-size: cover;
-  //max-width: 100%;
   width: 100%;
   height: auto;
 }
@@ -51,6 +54,11 @@ img {
   font-weight: 700;
   line-height: 100%;
   letter-spacing: -0.0875rem;
+
+  @include for-desktop-down() {
+    font-size: 3.3rem;
+    letter-spacing: -0.0625rem;
+  }
 
   @include for-tablet-down() {
     font-size: 2.5rem;
@@ -64,6 +72,10 @@ img {
   font-weight: 600;
   line-height: 110%;
   letter-spacing: -0.0625rem;
+
+  @include for-desktop-down() {
+    font-size: 2.5rem;
+  }
 
   @include for-tablet-down() {
     font-size: 2.25rem;
@@ -95,6 +107,10 @@ img {
   font-size: 1.875rem;
   font-weight: 400;
   line-height: 140%;
+
+  @include for-desktop-down() {
+    font-size: 1.5rem;
+  }
 
   @include for-tablet-down() {
     font-size: 1.5rem;
