--- a/client/app/ui/button/button.module.scss
+++ b/client/app/ui/button/button.module.scss
@@ -15,6 +15,7 @@
   transition: background .5s;
   font-style: normal;
   line-height: normal;
+  white-space: nowrap;
 
   &:hover {
     background: var(--yellow-color) !important;
