--- a/client/app/ui/header/header.module.scss
+++ b/client/app/ui/header/header.module.scss
@@ -10,8 +10,12 @@
   background: var(--white-color);
   padding: 0 4.5rem;
 
-  @include for-tablet-down() {
+  @include for-desktop-down() {
     height: 5rem;
+    padding: 1.56rem 2.5rem;
+  }
+
+  @include for-tablet-down() {
     padding: 1.67rem;
   }
 
@@ -25,7 +29,7 @@
     align-items: center;
     letter-spacing: -0.02625rem;
 
-    @include for-tablet-down() {
+    @include for-desktop-down() {
       display: none;
     }
   }
@@ -35,6 +39,10 @@
     align-items: center;
     column-gap: 0.85rem;
 
+    @include for-desktop-down() {
+      column-gap: 0.62rem;
+    }
+
     @include for-tablet-down() {
       column-gap: 0.56rem;
     }
@@ -42,11 +50,35 @@
     .icon {
       width: 2.0rem;
       height: 1.66rem;
+
+      @include for-desktop-down() {
+        width: 2.31363rem;
+        height: 1.875rem;
+      }
+
+      @include for-tablet-down() {
+
+      }
     }
 
     .name {
       width: 3.2rem;
       height: 1.1rem;
+
+      @include for-desktop-down() {
+        width: 3.64888rem;
+        height: 1.25rem;
+      }
+
+      @include for-tablet-down() {
+
+      }
+    }
+  }
+
+  .button {
+    @include for-desktop-down() {
+      display: none;
     }
   }
 
@@ -56,7 +88,7 @@
     height: 0.8rem;
     cursor: pointer;
 
-    @include for-tablet-down {
+    @include for-desktop-down {
       display: block;
     }
   }
