--- a/client/app/ui/carousel/carousel.module.scss
+++ b/client/app/ui/carousel/carousel.module.scss
@@ -21,6 +21,10 @@
     gap: 1.25rem;
     margin: 5rem 0;
 
+    @include for-desktop-down() {
+      gap: .75rem;
+    }
+
     @include for-tablet-down() {
       width: auto;
       flex-wrap: nowrap;
@@ -35,6 +39,14 @@
       font-size: 1.25rem;
       transition: background 0.3s;
       white-space: nowrap;
+
+      @include for-desktop-down() {
+        gap: .68rem;
+        border-radius: 0.50713rem;
+        font-size: 0.75rem;
+        font-weight: 600;
+        padding: 0.67613rem 0.50713rem;
+      }
     }
 
     .active {
@@ -44,6 +56,11 @@
     img {
       width: auto;
       height: 1.57rem;
+
+      @include for-desktop-down() {
+        width: auto;
+        height: 0.844rem;
+      }
     }
   }
 }
@@ -53,12 +70,6 @@
   flex-direction: column;
   width: 100%;
   position: relative;
-
-  //@include for-tablet-down() {
-  //  width: 100vw;
-  //}
-
-
 
   .slider {
     width: 100%;
@@ -74,12 +85,19 @@
       position: relative;
       //min-width: 27.5rem;
       min-width: 100%;
-      padding: 6.25rem 0 4.38rem 4.35rem;
+      padding: 6.25rem 0 4.37rem 4.35rem;
       background: var(--card-backgound);
       border-radius: 1.25rem;
       display: flex;
+      align-items: center;
       column-gap: 5rem;
       overflow: hidden;
+
+      @include for-desktop-down() {
+        column-gap: 1.62rem;
+        border-radius: 0.7605rem;
+        padding: 2.5rem 0 2.5rem 1.88rem;
+      }
 
       @include for-tablet-down() {
         padding: 2.25rem 1.25rem;
@@ -93,18 +111,27 @@
         justify-content: space-between;
         align-items: start;
         row-gap: 1rem;
+        height: 100%;
+
+        @include for-desktop-down() {
+          height: auto;
+
+          max-width: 22.2rem;
+          width: 100%;
+          row-gap: 1.25rem;
+        }
 
         @include for-tablet-down() {
           align-items: center;
         }
 
         .card_info {
-
           width: 100%;
           display: flex;
           flex-direction: column;
 
           span {
+            width: 100%;
             text-align: left;
             margin-bottom: 1.9rem;
           }
@@ -132,6 +159,10 @@
           margin-bottom: .94rem;
           margin-left: 1rem;
 
+          @include for-desktop-down() {
+            padding-left: 0;
+          }
+
           &:last-of-type {
             margin-bottom: 0;
           }
@@ -146,6 +177,10 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+
+        @include for-desktop-down() {
+          max-width: 18rem;
+        }
 
         @include for-tablet-down() {
           display: none;
