--- a/client/app/ui/carousel/carousel.module.scss
+++ b/client/app/ui/carousel/carousel.module.scss
@@ -1,6 +1,8 @@
 @import "../../breakpoints";
 
 .nav {
+  overflow-x: hidden;
+
   @include for-tablet-down() {
     padding: 0 1.25rem;
     display: flex;
@@ -8,8 +10,12 @@
     overflow-x: auto;
     max-width: 100vw;
     width: 100vw;
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+
+    &::-webkit-scrollbar {
+      display: none;  /* Safari and Chrome */
+    }
   }
 
   .buttons {
@@ -43,8 +49,7 @@
       @include for-desktop-down() {
         gap: .68rem;
         border-radius: 0.50713rem;
-        font-size: 0.75rem;
-        font-weight: 600;
+        //font-weight: 600;
         padding: 0.67613rem 0.50713rem;
       }
     }
@@ -66,6 +71,7 @@
 }
 
 .carousel {
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   width: 100%;
